2017-10-11  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-830

	* src/agenda_record.cc (operator<<):

	Inputs and outputs were not printed for ArrayOfAgenda. Fixes bug
	reported by Patrick.

2017-10-11 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-829

	* src/arts_api.[h.cc] (get_version, VersionStruct):
	Added function and struct to return ARTS version number.

2017-10-10 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-828

	* src/m_fos.cc (iyHybrid2):
	Put derivative variable manipulation behind jacobian_do/j_analytical_do
	barriers. This as perturbation jacobian calcs will call the
	iy_main_agenda with jacobian_do flag, but unmodified jacobian_quantities
	settings (i.e. we can not rely on the contents or size of
	jacobian_quantities only).
	Should work now for all kinds of jacobian species.

	* src/rte.[cc,h] (get_stepwise_scattersky_propmat,
	get_stepwise_scattersky_source, get_stepwise_effective_source):
	Pass jacobian_do and put derivative manipulation behind barriers.

	* controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts:
	Work in progress. Set back to use cheval data shipped with arts.

2017-10-09 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-827

	* src/rte.cc (get_stepwise_clearsky_propmat,
	get_stepwise_effective_source):
	Fixing issues that commit arts-2-3-823 brought up (its break of
	TestWfunsHybClear test case went unnoticed :-/) by further active
	initializations of variables and by replacing the not-applicable-anymore
	IsEmpty by an explicit check for analytical jacobians (the macro doesn't
	work here, though).

	* src/m_microphysics (pnd_fieldCalcFromParticleBulkProps):
	Fixed to allow pnds and dpnd_dx to be non-zero at the cloudbox limits
	when cloudbox limits at BOA and/or TOA. Fixes the issue of 0-tied
	Jacobians at BOA in iyHybrid2.

	* controlfiles/artscomponents/wfuns/TestWfunsHybCloudy.arts:
	Work in progress, testing further Jac species.
